# hyperrecall

./: .gitignore  DESIGN.md  README.md  REPORT.md  pyproject.toml
benchmarks/locomo/: CHAIN_NOTES.md  EXTRACTOR_V2_NOTES.md  HARNESS_NOTES.md  PLANNER_V2_NOTES.md  README.md  RERANK_NOTES.md  aggregate_multi.py  backfill_embeddings.py  contamination_probe.py  harness_multi.py  judge_mesh_only.py  phase1_ingest.py  phase1_ingest_v2.py  phase2_retrieval.py  phase3_judge.py  rerank_compare.py  run_ablations.sh  run_mesh_phase2.py  smoke_gemini.py  summarize_judged.py
benchmarks/locomo/harness/: judge.py  load.py  metrics.py  providers.py  run_all.py
benchmarks/locomo/harness/systems/: __init__.py  base.py  mem0_system.py  meshmind_system.py  vector_rag_system.py  zep_system.py
benchmarks/locomo/runs/harness_pilot/: meshmind.jsonl  summary.json  vector_rag.jsonl
benchmarks/locomo/runs/integration_v2/: summary.json
benchmarks/locomo/runs/phase1/: conv-26.sqlite  conv-26.stats.json
benchmarks/locomo/runs/phase1_v2/: conv-26.stats.json
benchmarks/locomo/runs/phase2/: conv-26.meshmind.jsonl  conv-26.vector_rag.jsonl
benchmarks/locomo/runs/phase2_baseline/: conv-26.meshmind.jsonl
benchmarks/locomo/runs/phase3/: ablation_baretext.json  ablation_no_dates.json  ablation_no_rerank.json  conv-26.meshmind.judged.jsonl  conv-26.vector_rag.judged.jsonl
benchmarks/locomo/runs/phase3_baseline/: conv-26.meshmind.judged.jsonl  summary.json
benchmarks/locomo/runs/phase3_v1/: conv-26.meshmind.baretext.phase2.jsonl  summary.json
benchmarks/locomo/runs/planner_v2/: summary.json
benchmarks/locomo/systems/: __init__.py  base.py  mem0_system.py  meshmind_system.py  vector_rag_system.py  zep_system.py
benchmarks/runs/phase1/: conv-26.sqlite-shm
benchmarks/synthetic/contradiction/: README.md  RESULTS.md  cases.json  results.json  run.py
docs/: architecture.md  philosophy.md  quickstart.md
examples/: contradiction_demo.py  hello_world.py  portable_export.py  real_ingest.py
src/hyperrecall/: __init__.py  cli.py  decay.py  mesh.py  models.py
src/hyperrecall/ingest/: __init__.py  extractor.py
src/hyperrecall/portable/: exporter.py  importer.py
src/hyperrecall/retrieval/: __init__.py  activation.py  query.py
src/hyperrecall/storage/: __init__.py  embeddings.py  sqlite_store.py
src/meshmind/: __init__.py  cli.py  decay.py  mesh.py  models.py
src/meshmind/ingest/: __init__.py  extractor.py  extractor_v2.py
src/meshmind/portable/: __init__.py  exporter.py  importer.py
src/meshmind/query/: __init__.py  planner.py
src/meshmind/retrieval/: query.py
src/meshmind/storage/: embeddings.py  schema.sql  sqlite_store.py
tests/: test_activation.py  test_decay.py  test_extractor.py  test_extractor_v2.py  test_hypergraph.py  test_mesh.py  test_portable.py  test_query_planner.py
