[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperrecall"
version = "0.0.1"
description = "Hypergraph memory for LLM agents — spreading activation, decay, and a portable file format."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Eli Azer" }]
keywords = [
    "llm", "memory", "agents", "hypergraph", "spreading-activation",
    "knowledge-graph", "retrieval", "ai",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/elicazer/hyperrecall"
Source = "https://github.com/elicazer/hyperrecall"
Issues = "https://github.com/elicazer/hyperrecall/issues"

[project.scripts]
hyperrecall = "hyperrecall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperrecall"]

[tool.hatch.build.targets.wheel.force-include]
"src/hyperrecall/storage/schema.sql" = "hyperrecall/storage/schema.sql"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
